--- a/index.html
+++ b/index.html
@@ -25,13 +25,14 @@
             <li><a href="#centercontent">Home</a></li>
             <li><a href="https://github.com/FlightGearRepublic/Boeing-707">GitHub</a></li>
             <li><a href="https://discord.gg/e27UuJxdtX">Our Discord Server</a></li>
+            <li><a href="https://github.com/FlightGearRepublic/Boeing-707/wiki">Wiki</a></li>
         </ul>
     <div>
 </header>
 
 <main>
     <section id="centercontent">
-        <img src="Boeing-707-GutHubLogo.png" alt="Boeing 707 wide Logo" height="128">	
+        <img src="Boeing-707-GutHubLogo.png" alt="Boeing 707 wide Logo" height="512">	
         <h1>Boeing 707 For FlightGear</h1>
         <h3>Welcome to Boeing 707 for FlightGear</h3>
     </section>
