--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
     
 </main>
 <footer>
+    <div id="footer">
+        A <a href="https://github.com/FlightGearRepublic">FlightGear Republic</a> Project.
+    </div>
 </footer>
 </body>
 </html>
