--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <title>Megaf Server - MT</title>
+    <title>Boeing 707 For FlightGear</title>
     <meta name="description" content="Boeing 707 For FlightGear">
     <meta name="author" content="Megaf">
     <link rev="made" href="mailto:mmegaf@gmail.com">
